feat: 부서 id로 의사 목록 조회 API 개발