@@ -7,7 +7,6 @@ import medlink.department.repository.DepartmentRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,6 +18,6 @@ public class DepartmentService {
         List<Department> departments = departmentRepository.findAll();
         return departments.stream()
                 .map(DepartmentResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
